# avro

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  RUNNING.md  STATUS.md  prompt.txt
src/avro/: __init__.py  allocate.py  cli.py  config.py  forecast.py  pricing.py  ranking.py  snapshot.py  sugar.py  voter.py
tests/: test_pipeline.py
